fix page transitions + add parallax and horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ nav {
 a:link {
   text-decoration: none;
   color: inherit;
-  transition: all 0.2s;
+  transition: color 0.2s, transform 0.2s;
 }
 
 a:visited {
@@ -68,17 +68,32 @@ a:active {
   flex-basis: min-content;
 }
 
-.menu-target {
+a.menu-target {
   background-color: var(--dark);
   padding: 2rem 2rem 4rem 5rem;
   max-width: 14rem;
   border-bottom-left-radius: 100%;
   transform-origin: 11rem 2rem;
+  display: inline-block;
+}
+
+a.menu-target span {
+  background-color: var(--dark);
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  /* transition: transform 0.4s ease-in; */
+  transition: transform 0.4s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+a.menu-target span.blown {
+  transform: scale(70);
 }
 
 .grow-on-hover {
-  display: inline-block;
-  transition: all 0.2s;
+  /* display: inline-block; */
+  transition: transform 0.2s;
 }
 
 .grow-on-hover:hover {
@@ -180,11 +195,6 @@ h1 {
   /* position: relative; */
   /* left: -11rem; */
   /* top: -10rem; */
-  transition: 0.4s ease-in;
-}
-
-.logo-container.blown {
-  transform: scale(30);
 }
 
 .heart-placeholder {
@@ -201,6 +211,12 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--light);
+  transition: 0.4s ease-in;
+}
+
+.logo-container a.blown {
+  transform: scale(30);
 }
 
 .logo-container img {
@@ -770,18 +786,28 @@ a.join:active {
   position: relative;
 }
 
-.gym-header h1.gym-page-title {
+.gym-header .title-container {
+  display: flex;
+  transform: rotate(-5deg);
   position: absolute;
   bottom: 4rem;
   right: 40%;
-  z-index: 999;
+  z-index: 98;
+}
+
+.gym-header h1.gym-page-title {
+  /* position: absolute;
+  bottom: 4rem;
+  right: 40%;
+  z-index: 999; */
   padding: 0 5.5rem 0 0;
   text-align: right;
 }
 
 .gym-header .overlay-img {
   position: absolute;
-  top: calc(2 * var(--gym-page-pad));
+  /* top: calc(2 * var(--gym-page-pad)); */
+  bottom: calc(-4 * var(--gym-page-pad));
   right: 0rem;
   width: 40%;
   z-index: 99;
